@@ -55,6 +55,9 @@ AppEnvironment.
 
 Since version 2.22, NSSM can rotate existing output files when redirecting I/O.
 
+Since version 2.22, NSSM can set service display name, description and startup
+type.
+
 
 Usage
 -----
