@@ -105,6 +105,20 @@ FONT 8, "MS Sans Serif"
 
 
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+IDD_DETAILS DIALOG 9, 20, 261, 75
+STYLE DS_SHELLFONT | WS_VISIBLE | WS_CHILD | DS_CONTROL
+FONT 8, "MS Sans Serif"
+{
+    GROUPBOX        "Details", IDC_STATIC, 7, 7, 251, 68
+    LTEXT           "Display name:", IDC_STATIC, 13, 18, 45, 8, SS_LEFT
+    EDITTEXT        IDC_DISPLAYNAME, 70, 16, 184, 12, ES_AUTOHSCROLL
+    LTEXT           "Description:", IDC_STATIC, 13, 34, 38, 8, SS_LEFT
+    EDITTEXT        IDC_DESCRIPTION, 70, 32, 184, 22, ES_AUTOHSCROLL, WS_EX_ACCEPTFILES
+    LTEXT           "Startup type:", IDC_STATIC, 13, 60, 41, 8, SS_LEFT
+    COMBOBOX        IDC_STARTUP, 70, 58, 100, 120, CBS_DROPDOWNLIST | CBS_HASSTRINGS | WS_TABSTOP
+}
+
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 IDD_SHUTDOWN DIALOG 9, 20, 261, 75
 STYLE DS_SHELLFONT | WS_VISIBLE | WS_CHILD | DS_CONTROL
 FONT 8, "MS Sans Serif"
